--- a/templates/issue_book.html
+++ b/templates/issue_book.html
@@ -28,8 +28,8 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="user_id">User ID:</label>
-                    <input type="number" id="user_id" name="user_id" placeholder="Enter User ID (from users table)" required>
+                    <label for="user_name">User Name:</label>
+                    <input type="text" name="user_name" name="user_name" placeholder="Enter User name" required>
                 </div>
 
                 <div class="form-group">
